--- a/MachineCalculator/appsettings.json
+++ b/MachineCalculator/appsettings.json
@@ -1,8 +1,19 @@
 ﻿{
   "Logging": {
     "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
+    "Debug": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
     }
+  },
+  "Data": {
+    "PostgreSqlConnectionString": "Server = 10.40.10.143; Database = testakhruslov; Username = postgres; Password = QweAsd123; Enlist = true",
   }
+
 }
