--- a/MachineCalculator/appsettings.json
+++ b/MachineCalculator/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "Data": {
-    "PostgreSqlConnectionString": "Server = 10.40.10.143; Database = testakhruslov; Username = postgres; Password = QweAsd123; Enlist = true",
+    "PostgreSqlConnectionString": "Server = 10.40.10.143; Database = testakhruslov; Username = postgres; Password = QweAsd123; Enlist = true"
   }
 
 }
