все кроме независимой структуры параметров

--- a/MachineCalculator/appsettings.json
+++ b/MachineCalculator/appsettings.json
@@ -12,8 +12,8 @@
       }
     }
   },
-  "Data": {
-    "PostgreSqlConnectionString": "Server = 10.40.10.143; Database = testakhruslov; Username = postgres; Password = QweAsd123; Enlist = true"
+  "ConnectionStrings": {
+    "PostgreSqlConnectionString": "Server = localhost; Database = postgres; Username = postgres; Password = Gungame; Enlist = true"
   }
 
 }
