--- a/MachineCalculator/appsettings.json
+++ b/MachineCalculator/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "PostgreSqlConnectionString": "Server = localhost; Database = postgres; Username = postgres; Password = Gungame; Enlist = true"
+    "PostgreSqlConnectionString": "Server = horton.elephantsql.com; Database = vndfyozy; Username = vndfyozy; Password = ZjmOJ3QBVKLmC71W1u0_KGIAzT0eN3kK; Enlist = true"
   }
 
 }
